# test-driver

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  flake.nix  go.mod  go.sum  justfile  pyproject.toml
.agents/skills/: audit-change  capturing-memory  close-change  consult  continuation  draft-design-revision  implement  maintaining-memory  next  notes  (+5 more)
.claude/: settings.json
.spec-driver/: AGENTS.md  skills.allowlist  workflow.toml
memory/: mem.concept.spec-driver.audit.md  mem.concept.spec-driver.backlog.md  mem.concept.spec-driver.ceremony.pioneer.md  mem.concept.spec-driver.ceremony.settler.md  mem.concept.spec-driver.ceremony.town-planner.md  mem.concept.spec-driver.contract.md  mem.concept.spec-driver.delta.md  mem.concept.spec-driver.design-revision.md  mem.concept.spec-driver.philosophy.md  mem.concept.spec-driver.plan.md  mem.concept.spec-driver.posture.md  mem.concept.spec-driver.relations.md  mem.concept.spec-driver.requirement-lifecycle.md  mem.concept.spec-driver.spec.md  mem.concept.spec-driver.truth-model.md  mem.concept.spec-driver.verification.md  mem.fact.project.de-011-enum-sources.md  mem.fact.spec-driver.coverage-gate.md  mem.fact.spec-driver.requirement-bundle-files.md  mem.pattern.project.agent-pitfalls.md  mem.pattern.project.completion.md  mem.pattern.project.workflow.md  mem.pattern.spec-driver.core-loop.md  mem.pattern.spec-driver.frontmatter-compaction.md  mem.signpost.spec-driver.ceremony.md  mem.signpost.spec-driver.file-map.md  mem.signpost.spec-driver.lifecycle-start.md  mem.thread.de-002.handover.md
specify/: standards
(+246 files in other folders)
