[project]
name = "test-driver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "spec-driver",
]

[tool.uv.workspace]
members = [
    "spec-driver",
]

[tool.uv.sources]
spec-driver = { workspace = true, editable = true }
